Removing py files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 Template_code (NO USE)
 Test.py
 Final_Code_Menu_Tkinter_Template.py
-Template_code (NO USE)
 *.txt
+
+Final_Code_CBIS_DDSM_1_Change_Format.py
+Final_Code_CBIS_DDSM_2_Split_Images.py
+Final_Code_CBIS_DDSM_3_Select_Technique.py
+Final_Code_CBIS_DDSM_4_Data_Augmentation.py
