--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Template_code (NO USE)
 Test.py
 Final_Code_Menu_Tkinter_Template.py
 *.txt
+CV2text.py
 
 Final_Code_CBIS_DDSM_1_Change_Format.py
 Final_Code_CBIS_DDSM_2_Split_Images.py
